2009-01-28  Ryan Lortie  <desrt@desrt.ca>

	Bug 568575 – _async functions for GDataInputStream

	* gdatainputstream.h:
	* gdatainputstream.c: add _async versions of read_line and read_until.
	* gio.symbols:
	* ../docs/reference/gio/gio-sections.txt: add new functions
	* tests/sleepy-stream.c: new test case for async read line
	* tests/Makefile.am: add new test

2009-01-22  Ryan Lortie  <desrt@desrt.ca>

	Bug 568723 – g_buffered_input_stream_fill_async doesn't take count == -1

	* gbufferedinputstream.c (g_buffered_input_stream_fill_async,
	g_buffered_input_stream_fill): check for count < -1 instead of count <
	0 and copy modified check to non-async version for consistency.
	document the "count = -1" API.

2009-01-22  Ryan Lortie  <desrt@desrt.ca>

	Bug 568741 – g_buffered_input_stream_fill_async doesn't work

	* gbufferedinputstream.c (fill_async_callback): grow the buffer tail
	after we have successfully read data from the base stream

2009-01-20  Ryan Lortie  <desrt@desrt.ca>

	Bug 568394 – dropping the last reference to a stream filter closes the
	base stream

	* gfilterinputstream.h:
	* gfilterinputstream.c: add "close-base-stream" property and only
	close the base stream if it is true.  issue async close callbacks from
	correct source object.
	* gfilteroutputstream.h:
	* gfilteroutputstream.c: add a "close-base-stream" property and only
	close the base stream if it is true.  issue async close callbacks from
	correct source object.
	* gbufferedoutputstream: check g_filter_output_stream_get_close_base()
	before closing the base stream.  fix invalid source tag comparison in
	close_async (was comparing to flush_async).
	* ../docs/reference/gio/gio-sections.txt:
	* gio.symbols: add
	g_filter_{in,out}put_stream_{g,s}et_close_base_stream
	* tests/filter-streams.c: new test cases
	* tests/Makefile.am: add new test
	* tests/.gitignore: add new test

2009-01-19  Matthias Clasen  <mclasen@redhat.com>

	* gdesktopappinfo.c (g_desktop_app_info_new): Expand the docs.
