@@ -162,10 +162,30 @@ g_io_error_from_errno (gint err_no)
       break;
 #endif
 
-#ifdef EWOULDBLOCK
+/* some magic to deal with EWOULDBLOCK and EAGAIN.
+ * apparently on HP-UX these are actually defined to different values,
+ * but on Linux, for example, they are the same.
+ */
+#if defined(EWOULDBLOCK) && defined(EAGAIN) && EWOULDBLOCK == EAGAIN
+    /* we have both and they are the same: only emit one case. */
+    case EAGAIN:
+      return G_IO_ERROR_WOULD_BLOCK;
+      break;
+#else
+    /* else: consider each of them separately.  this handles both the
+     * case of having only one and the case where they are different values.
+     */
+# ifdef EAGAIN
+    case EAGAIN:
+      return G_IO_ERROR_WOULD_BLOCK;
+      break;
+# endif
+
+# ifdef EWOULDBLOCK
     case EWOULDBLOCK:
       return G_IO_ERROR_WOULD_BLOCK;
       break;
+# endif
 #endif
 
 #ifdef EMFILE
